# NeuralHDHair1

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  angs_pair1.json  angs_pair2.json  compute_loss.py  contour.py  female_halfbody_medium.ply  findFileByTime.sh  get_bust.py  get_hair_root.py  image_edit.py  length.json  length1.json  mean_landmark.json  mean_landmark1.json  readiness.sh  requirements.txt  roots1.mat  roots2.mat  roots3.mat  roots3_0.mat  test.json  test.py
BSpline/: BSpline.cpp  BSpline.h  CMakeLists.txt  main.cpp  pyBsplineInterp.cpp  test.txt  test_pyBsplineInterp.py
Code/: batch_test.py  config.json  config_test.json  get_face_info.py  get_voxelsample.py  http_interface.py  image_filter.py  img2depth.py  inference.py  inference_step.py  main.py  ransac.py  test.py  test_NeuralHaircut.py  test_render.py  util.py
Code/Loss/: percepture_loss.py
Code/Models/: Decoder.py  Encoder.py  GaborNet.py  GrowingNet.py  HairSpatNet.py  Local_filter.py  UNet.py  UNet1.py  UNetS.py  gabor.py  gabor2.py  hourglass.py
Code/Tools/: FaceRegister.py  bSpline.py  connect_root.py  curvesAbc.py  drawTools.py  file_io.py  iter_counter.py  render.py  render_strand.py  resample.py  to_unity.py  utils.py  visualizer.py
Code/classify/: config.json  preprocess_ori2d.py
Code/data-generate/: render_orientationMap.py  voxelize.py
Code/dataload/: __init__.py  depth_loader.py  imageCal_loader.py  image_loader.py  image_loader1.py  origin_step_loader.py  render_strand.py  step_loader.py  strand_loader.py
Code/options/: base_options.py  inference_options.py  test_options.py  train_options.py
Code/service/: Dockerfile  config.json  (+9 more)
NeuralHaircut/: .gitignore  run_strands_optimization.py
data/: Train_input1
service/: .dockerignore  Dockerfile  config.json  handler.py  inference_step.py  readme.md  run_services.sh  service.py
(+51 files in other folders)
